# jyc

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  FEISHU.md  GITHUB_CHANNEL.md  GITHUB_ISSUE_CHANNEL_PLAN.md  IMPLEMENTATION.md  README.md  SYSTEMD.md  agents.example.md  agents.github-dev.example.md  agents.invoice.example.md  agents.reviewer.example.md  config.example.toml  config.test.toml  config_template.toml  deploy-bare-metal.sh  deploy-templates.sh  deploy.sh  design.md  jin-actvity.jsonl  jin-agent-context.json  jin-agent-session.json  jin-chat_history.jsonl  jyc-ctl.sh  jyc-podman-tunnel.sh  run-jyc.sh  system.md.example  token_parsing_demo.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml  sync-to-gitee.yml
.opencode/plans/: live-message-injection.md
crates/jyc-agent/: Cargo.toml
crates/jyc-agent/src/: agent_loop.rs  lib.rs  service.rs  session.rs  types.rs  vision.rs
crates/jyc-agent/src/provider/: anthropic.rs  mod.rs  openai_compat.rs
crates/jyc-agent/src/tools/: mcp_bridge.rs  mcp_client.rs  mod.rs  registry.rs
crates/jyc-agent/src/tools/builtin/: bash.rs  edit.rs  glob_tool.rs  grep.rs  job_tools.rs  mod.rs  read.rs  read_image.rs  send_to_thread.rs  webfetch.rs  write.rs
crates/jyc-agent/tests/: unit_tests.rs
crates/jyc-channels/: Cargo.toml
crates/jyc-channels/src/: lib.rs  registry.rs
crates/jyc-channels/src/email/: inbound.rs  outbound.rs
crates/jyc-channels/src/feishu/: client.rs  formatter.rs  inbound.rs  mod.rs  outbound.rs  types.rs  validator.rs  websocket.rs
crates/jyc-channels/src/gitee/: client.rs  inbound.rs  mod.rs  outbound.rs
crates/jyc-channels/src/github/: client.rs  inbound.rs  outbound.rs
crates/jyc-channels/src/local/: inbound.rs  mod.rs  outbound.rs
crates/jyc-channels/src/openilink/: client.rs  formatter.rs  inbound.rs  mod.rs  outbound.rs  types.rs  websocket.rs
crates/jyc-channels/src/websocket/: inbound.rs  mod.rs  outbound.rs
crates/jyc-channels/src/wechat/: inbound.rs  media.rs  mod.rs  outbound.rs  websocket.rs
crates/jyc-channels/src/wecom/: crypto.rs  inbound.rs  kf_client.rs  kf_cursor.rs  kf_dedup.rs  kf_inbound.rs  kf_outbound.rs  mod.rs  outbound.rs  server.rs  token_cache.rs
crates/jyc-channels/src/wecom_bot/: client.rs  inbound.rs  media.rs  mod.rs  outbound.rs  types.rs
crates/jyc-channels/tests/: close_handler_test.rs  websocket_integration_test.rs
crates/jyc-cli/: Cargo.toml  config.example.toml
crates/jyc-cli/src/: main.rs
crates/jyc-cli/src/cli/: agent_builder.rs  command_popup.rs  config.rs  dashboard.rs  local.rs  mcp_question.rs  mcp_reply.rs  mcp_vision.rs  mod.rs  monitor.rs  patterns.rs  resolve.rs  serve.rs  stop.rs  templates.rs
crates/jyc-core/: Cargo.toml
crates/jyc-core/src/: activity_log_store.rs  agent.rs  attachment_storage.rs  channel_orchestrator.rs  chat_log_store.rs  email_parser.rs  job_store.rs  lib.rs  message_router.rs  message_storage.rs  metrics.rs  pending_delivery.rs  security.rs  session_state.rs  state_manager.rs  static_agent.rs  template_dirs.rs  template_utils.rs  thread_event.rs  thread_event_bus.rs  thread_json.rs  thread_manager.rs  thread_path.rs
crates/jyc-core/src/command/: cancel_handler.rs  close_handler.rs  handler.rs  help_handler.rs  mod.rs  mode_handler.rs  model_handler.rs  new_handler.rs  pin_common.rs  pin_handler.rs  registry.rs  reset_handler.rs  template_handler.rs  unpin_handler.rs
crates/jyc-core/tests/: reload_test.rs
crates/jyc-inspect/: Cargo.toml
crates/jyc-inspect/src/: client.rs  server.rs
crates/jyc-mcp/: Cargo.toml
crates/jyc-mcp/src/: context.rs  lib.rs  question_tool.rs  reply_tool.rs  vision_tool.rs
crates/jyc-services/: Cargo.toml
crates/jyc-services/src/: job_scheduler.rs  lib.rs  model_handler.rs
crates/jyc-services/src/imap/: client.rs  mod.rs  monitor.rs  parse_email.rs
crates/jyc-services/src/opencode/: client.rs  mod.rs  prompt_builder.rs  service.rs  session.rs  types.rs
crates/jyc-services/src/smtp/: client.rs
crates/jyc-types/: Cargo.toml
crates/jyc-types/src/: agent.rs  channel.rs  config.rs  gitee_config.rs  github_config.rs  inspect.rs  job.rs  lib.rs  local_config.rs  openilink_config.rs  validation.rs  wechat_config.rs  wecom_bot_config.rs  wecom_config.rs  wecom_kf_config.rs
crates/jyc-utils/: Cargo.toml
crates/jyc-utils/src/: attachment_validator.rs  constants.rs  helpers.rs  lib.rs  paths.rs
docker/: .env  .env.example  .env.proxy  .env.proxy.example  Dockerfile  README.md  docker-compose.proxy.yml  docker-compose.yml  o2f-server.sh  system.md.example
docker/s6-rc.d/jyc/: run
docs/: bare-metal-deploy.md  tools.md
docs/channels/: gitee.md  local.md  websocket.md  wecom.md  wecom_bot.md  wecomkf.md
dotfiles/opencode/: opencode.jsonc
dotfiles/zsh/: .zshrc  .zshrc.local.example
s6-rc.d/jyc/: run
src/: main.rs
src/channels/: mod.rs  types.rs
src/cli/: dashboard.rs  mcp_vision.rs  mod.rs  monitor.rs  patterns.rs  templates.rs
src/config/: mod.rs  types.rs  validation.rs
src/core/: activity_log_store.rs  alert_service.rs  attachment_storage.rs  chat_log_store.rs  email_parser.rs  idle_cleanup.rs  message_router.rs  message_storage.rs  mod.rs  pending_delivery.rs  template_utils.rs  thread_event.rs  thread_event_bus.rs  thread_manager.rs  thread_manager_tests.rs  thread_path.rs
src/inspect/: client.rs  server.rs  types.rs
src/mcp/: context.rs  mod.rs  question_tool.rs  reply_tool.rs  vision_tool.rs
src/services/: agent.rs  static_agent.rs
src/utils/: attachment_validator.rs  constants.rs  helpers.rs
templates/: sap-mcps.toml  sap-profile.toml  templates.toml
templates/context/: sap-project-background.md
templates/frontend-designer/: AGENTS.md
templates/gitee-developer/: AGENTS.md
templates/gitee-planner/: AGENTS.md
templates/gitee-reviewer/: AGENTS.md
templates/github-developer/: AGENTS.md
templates/github-high-level-planner/: AGENTS.md
templates/github-planner/: AGENTS.md
templates/github-reviewer/: AGENTS.md
templates/invoice-processing/: AGENTS.md
templates/jyc-dev/: AGENTS.md
(+64 files in other folders)
