[package]
name = "jyc-core"
version = "0.2.1"
edition = "2024"
description = "Core business logic for the JYC AI agent framework"

[dependencies]
jyc-types = { path = "../jyc-types" }
jyc-utils = { path = "../jyc-utils" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
glob = "0.3"
arc-swap = "1"
tracing = "0.1"
comrak = "0.37"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
regex = "1"
base64 = "0.22"
libc = "0.2"
toml = "0.8"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
