[package]
name = "jyc-inspect"
version.workspace = true
edition = "2024"
description = "Runtime inspection server/client for JYC"

[dependencies]
jyc-types = { path = "../jyc-types" }
jyc-core = { path = "../jyc-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
