[package]
name = "jyc-mcp"
version = "0.2.1"
edition = "2024"
description = "MCP tools for the JYC AI agent framework"

[dependencies]
jyc-types = { path = "../jyc-types" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
rmcp = { version = "1.3", features = ["server", "transport-io", "schemars"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
