[package]
name = "jyc-services"
version.workspace = true
edition = "2024"
description = "External service integrations for the JYC AI agent framework"

[dependencies]
jyc-types = { path = "../jyc-types" }
jyc-utils = { path = "../jyc-utils" }
jyc-core = { path = "../jyc-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-native-tls = "0.5"
mail-parser = "0.9"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
comrak = "0.37"
htmd = "0.5"
regex = "1"
base64 = "0.22"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
