[package]
name = "jyc-types"
version.workspace = true
edition = "2024"
description = "Shared types for the JYC AI agent framework"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
regex = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
cron = { version = "0.17", default-features = false, features = ["serde"] }

[dev-dependencies]
tempfile = "3"
